Browser fixes and other bits

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- dns prefetch for faster loading of external resources -->
   {% include dns_prefetch.html %}
 
-  <title>marinulon.com</title>
+  <title>marinsekesan.com</title>
   <meta name="author" content="Marin Sekesan">
   <meta name="description" content="Melbourne based freelance UI/UX Designer.">
 
@@ -130,9 +130,9 @@
         </div>
 
         <div class="social">
-          <a href="http://twitter.com/marinsekesan" class="fa fa-twitter"><i class="h">Twitter</i></a>
-          <!-- <a href="http://twitter.com/marinulon" class="fa fa-behance"><i class="h">Behance</i></a> -->
-          <a href="http://instagram.com/marinsekesan" class="fa fa-instagram"><i class="h">Instagram</i></a>
+          <a href="http://twitter.com/marinsekesan" class="fa fa-twitter" target="_blank"><i class="h">Twitter</i></a>
+          <!-- <a href="http://twitter.com/marinulon" class="fa fa-behance" target="_blank"><i class="h">Behance</i></a> -->
+          <a href="http://instagram.com/marinsekesan" class="fa fa-instagram" target="_blank"><i class="h">Instagram</i></a>
         </div>
 
       </div>
