--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="#top" class="logo is-scroll" rel="home">Marin Sekesan</a>
       <a href="#cv" class="nav-item is-scroll first">CV</a>
       <a href="#work" class="nav-item is-scroll">Work</a>
-      <a href="mailto:marinsekesan@gmail.com" class="nav-item last">Contact</a>
+      <a href="mailto:me@marinsekesan.com" class="nav-item last">Contact</a>
     </p>
 
   </header>
@@ -49,7 +49,7 @@
     <p class="intro__nav">
       <a href="#cv" class="nav-item is-scroll nav-item--big first">CV</a>
       <a href="#work" class="nav-item is-scroll nav-item--big">Work</a>
-      <a href="mailto:marinsekesan@gmail.com" class="nav-item nav-item--big last">Contact</a>
+      <a href="mailto:me@marinsekesan.com" class="nav-item nav-item--big last">Contact</a>
     </p>
 
   </section>
@@ -123,7 +123,7 @@
         <p>Diploma of Graphic Design | 2006 &amp; 2007</p>
 
         <div class="contact">
-          <a href="mailto:marinsekesan@gmail.com">
+          <a href="mailto:me@marinsekesan.com">
             <h3 id="contact"><i class="fa fa-paper-plane"></i> Get in touch</h3>
             <p>I’m available for freelance work</p>
           </a>
