--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h4>NMIT</h4>
         <p>Cert IV Audio Production | 2003</p>
 
-        <h4>Grenadi School of design (Tractor)</h4>
+        <h4>Grenadi School of Design (Tractor)</h4>
         <p>Diploma of Graphic Design | 2006 &amp; 2007</p>
 
         <div class="contact">
