--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <p>UI designer | 2008 - 2009</p>
 
         <h4>Weave</h4>
-        <p>Senior UI designer  | 2009 - 2015</p>
+        <p>UI / UX designer  | 2009 - 2014</p>
 
         <h4>Freelance</h4>
         <p>UI / UX Designer | Current</p>
