--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
           <a href="http://twitter.com/marinsekesan" class="fa fa-twitter" target="_blank"><i class="h">Twitter</i></a>
           <!-- <a href="http://twitter.com/marinulon" class="fa fa-behance" target="_blank"><i class="h">Behance</i></a> -->
           <a href="http://instagram.com/marinsekesan" class="fa fa-instagram" target="_blank"><i class="h">Instagram</i></a>
+          <a href="http://au.linkedin.com/in/marinsekesan" class="fa fa-linkedin" target="_blank"><i class="h">LinkedIn</i></a>
         </div>
 
       </div>
