--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <h4>NMIT</h4>
         <p>Cert IV Audio Production | 2003</p>
 
-        <h4>Grenadi School of Design (Tractor)</h4>
-        <p>Diploma of Graphic Design | 2006 &amp; 2007</p>
+        <h4>Tractor (Formerly Grenadi School of Design)</h4>
+        <p>Advanced Diploma of Graphic Design | 2006 &amp; 2007</p>
 
         <div class="contact">
           <a href="mailto:me@marinsekesan.com">
