--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="intro__logo"></div>
 
-    <h1 class="intro__title">Hi, I'm Marin <br />Melbourne based freelance UI/UX Designer.</h1>
+    <h1 class="intro__title">Hi, I'm Marin (Pronunciation: [maˈrin])<br />Melbourne based freelance UI/UX Designer.</h1>
 
     <h2 class="intro__summary">I also play guitar in a band called <a href="http://kalacoma.com" target="_blank">Kalacoma</a>, build my own effects pedals, love vintage instruments, pizza and formula one.</h2>
 
@@ -120,7 +120,7 @@
         <p>Cert IV Audio Production | 2003</p>
 
         <h4>Tractor (Formerly Grenadi School of Design)</h4>
-        <p>Advanced Diploma of Graphic Design | 2006 &amp; 2007</p>
+        <p>AdvDip of Graphic Design | 2006 &amp; 2007</p>
 
         <div class="contact">
           <a href="mailto:me@marinsekesan.com">
