--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <h3>Qualifications</h3>
 
         <h4>NMIT</h4>
-        <p>Cert IV Audio Production | 2003</p>
+        <p>Cert IV in Audio Production | 2003</p>
 
         <h4>Tractor (Formerly Grenadi School of Design)</h4>
         <p>AdvDip of Graphic Design | 2006 &amp; 2007</p>
