--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <title>marinsekesan.com</title>
   <meta name="author" content="Marin Sekesan">
-  <meta name="description" content="Melbourne based freelance UI/UX Designer.">
+  <meta name="description" content="Melbourne based freelance UI/UX and Brand Designer.">
 
   <!-- stylesheet -->
   <link rel="stylesheet" href="/css/marinulon.css">
@@ -67,7 +67,7 @@
       </div>
       <div class="cv--bio">
 
-        <h3>With an education in both Graphic Design and Audio Engineering, I have spent the past 7 years developing my passion for functional design.</h3>
+        <h3>With an education in both Graphic Design and Audio Engineering, I have spent the past 8 years developing my passion for functional design.</h3>
 
         <p>Delivering award winning digital designs for well established Australian organisations and innovative start-ups alike.</p>
 
