--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         <p>UI designer | 2008 - 2009</p>
 
         <h4>Weave</h4>
-        <p>UI / UX designer  | 2009 - 2014</p>
+        <p>UI / UX designer  | 2010 - 2014</p>
 
         <h4>Freelance</h4>
-        <p>UI / UX Designer | Current</p>
+        <p>UI / UX Designer | 2015 - Current</p>
 
       </div>
       <div class="cv--awards">
@@ -119,7 +119,7 @@
         <h4>Melbourne Polytechnic (NMIT)</h4>
         <p>CertIV in Audio Production | 2003</p>
 
-        <h4>Tractor (Formerly Grenadi School of Design)</h4>
+        <h4>Tractor</h4>
         <p>AdvDip of Graphic Design | 2006 &amp; 2007</p>
 
         <div class="contact">
