--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <h3>Experience</h3>
 
         <h4>MD Studio</h4>
-        <p>Sound Engineer | 2004 &amp; 2005</p>
+        <p>Sound Engineer | 2004 - 2005</p>
 
         <h4>Freelance</h4>
         <p>Graphic Designer | 2007</p>
