--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <title>marinsekesan.com</title>
   <meta name="author" content="Marin Sekesan">
-  <meta name="description" content="Melbourne based freelance UI/UX and Brand Designer.">
+  <meta name="description" content="Melbourne based freelance Information Architect, Visual Designer and Brand Designer.">
 
   <!-- stylesheet -->
   <link rel="stylesheet" href="/css/marinulon.css">
@@ -87,13 +87,13 @@
         <p>Graphic Designer | 2007</p>
 
         <h4>Acorn Web</h4>
-        <p>UI designer | 2008 - 2009</p>
+        <p>Visual and Brand Designer | 2008 - 2009</p>
 
         <h4>Weave</h4>
-        <p>UI / UX designer  | 2010 - 2014</p>
+        <p>IA, Visual and Brand Designer  | 2010 - 2014</p>
 
         <h4>Freelance</h4>
-        <p>UI / UX Designer | 2015 - Current</p>
+        <p>IA, Visual and Brand Designer | 2015 - Current</p>
 
       </div>
       <div class="cv--awards">
