--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="intro__logo"></div>
 
-    <h1 class="intro__title">Hi, I'm Marin (Pronunciation: [maˈrin])<br />Melbourne based freelance UI/UX Designer.</h1>
+    <h1 class="intro__title">Hi, I'm Marin (Pronunciation: [maˈrin])<br />Melbourne based freelance IA, Visual and Brand Designer.</h1>
 
     <h2 class="intro__summary">I also play guitar in a band called <a href="http://kalacoma.com" target="_blank">Kalacoma</a>, build my own effects pedals, love vintage instruments, pizza and formula one.</h2>
 
