--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114351518-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114351518-1');
+</script>
 
   <!-- meta -->
   <meta charset="UTF-8">
