--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div class="intro__logo"></div>
 
-    <h1 class="intro__title">Hi, I'm Marin<br />Melbourne based freelance IA, Visual and Brand Designer.</h1>
+    <h1 class="intro__title">Hi, I'm Marin.<br />Melbourne based freelance IA, Visual and Brand Designer.</h1>
 
     <h2 class="intro__summary">I also play guitar in a band called <a href="http://kalacoma.com" target="_blank">Kalacoma</a>, build my own effects pedals, love vintage instruments, pizza and formula one.</h2>
 
@@ -77,7 +77,7 @@
       </div>
       <div class="cv--bio">
 
-        <h3>With an education in both Graphic Design and Audio Engineering, I have spent the past 9 years developing my passion for functional design.</h3>
+        <h3>With an education in both Graphic Design and Audio Engineering, I have spent the past 10 years developing my passion for functional design.</h3>
 
         <p>Delivering award winning digital designs for well established Australian organisations and innovative start-ups alike.</p>
 
