--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <p>Graphic Designer | 2007</p>
 
         <h4>Acorn Web</h4>
-        <p>Visual and Brand Designer | 2008 - 2009</p>
+        <p>Visual and Brand Designer | 2008 - 2010</p>
 
         <h4>Weave</h4>
         <p>IA, Visual and Brand Designer  | 2010 - 2015</p>
@@ -131,6 +131,9 @@
 
         <h4>Tractor</h4>
         <p>AdvDip of Graphic Design | 2006 &amp; 2007</p>
+        
+        <h4>Data Runs Deep</h4>
+        <p>Google Analytics, Data Studio & Tag Manager Training | 2018</p>
 
         <div class="contact">
           <a href="mailto:me@marinsekesan.com">
