--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div class="intro__logo"></div>
 
-    <h1 class="intro__title">Hi, I'm Marin Sekesan.<br />Melbourne based freelance IA, Visual and Brand Designer.</h1>
+    <h1 class="intro__title">Hi, I'm Marin Sekesan.<br />Melbourne based freelance UX, UI and Brand Designer.</h1>
 
     <h2 class="intro__summary">I also play guitar in a band called <a href="http://kalacoma.com" target="_blank">Kalacoma</a>, build my own effects pedals, love vintage instruments, pizza and formula one.</h2>
 
@@ -103,7 +103,7 @@
         <p>IA, Visual and Brand Designer  | 2010 - 2015</p>
 
         <h4>Freelance</h4>
-        <p>IA, Visual and Brand Designer | 2015 - Current</p>
+        <p>UX, UI and Brand Designer | 2015 - Current</p>
 
       </div>
       <div class="cv--awards">
@@ -134,6 +134,9 @@
         
         <h4>Data Runs Deep</h4>
         <p>Google Analytics, Data Studio & Tag Manager Training | 2018</p>
+        
+        <h4>Academy Xi</h4>
+        <p>User Experience Design | 2018</p>
 
         <div class="contact">
           <a href="mailto:me@marinsekesan.com">
