--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <p>AdvDip of Graphic Design | 2006 &amp; 2007</p>
         
         <h4>Data Runs Deep</h4>
-        <p>Google Analytics, Data Studio & Tag Manager | 2018</p>
+        <p>GA, Data Studio & Tag Manager | 2018</p>
         
         <h4>Academy Xi</h4>
         <p>User Experience Design | 2018</p>
