--- a/index.html
+++ b/index.html
@@ -96,14 +96,20 @@
         <h4>Freelance</h4>
         <p>Graphic Designer | 2007</p>
 
-        <h4>Acorn Web</h4>
+        <h4>Acorn</h4>
         <p>Visual and Brand Designer | 2008 - 2010</p>
 
         <h4>Weave</h4>
         <p>IA, Visual and Brand Designer  | 2010 - 2015</p>
 
         <h4>Freelance</h4>
-        <p>UX, UI and Brand Designer | 2015 - Current</p>
+        <p>UX, UI and Brand Designer | 2015 - 2018</p>
+        
+        <h4>Alphawhale</h4>
+        <p>Visual and UI Designer (UX Team)  2018 - 2019</p>
+        
+        <h4>Freelance</h4>
+        <p>UX, UI, Visual and Brand Designer | 2019 - Current</p>
 
       </div>
       <div class="cv--awards">
@@ -146,9 +152,9 @@
         </div>
 
         <div class="social">
-          <a href="http://twitter.com/marinsekesan" class="fa fa-twitter" target="_blank"><i class="h">Twitter</i></a>
-          <!-- <a href="http://twitter.com/marinulon" class="fa fa-behance" target="_blank"><i class="h">Behance</i></a> -->
-          <a href="http://instagram.com/marinsekesan" class="fa fa-instagram" target="_blank"><i class="h">Instagram</i></a>
+          <!-- <a href="http://twitter.com/marinsekesan" class="fa fa-twitter" target="_blank"><i class="h">Twitter</i></a>
+          <a href="http://twitter.com/marinulon" class="fa fa-behance" target="_blank"><i class="h">Behance</i></a>
+          <a href="http://instagram.com/marinsekesan" class="fa fa-instagram" target="_blank"><i class="h">Instagram</i></a> -->
           <a href="http://au.linkedin.com/in/marinsekesan" class="fa fa-linkedin" target="_blank"><i class="h">LinkedIn</i></a>
         </div>
 
