--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <p>Visual and UI Designer (UX Team)  2018 - 2019</p>
         
         <h4>Freelance</h4>
-        <p>UX, UI, Visual and Brand Designer | 2019 - Current</p>
+        <p>UX, UI, and Brand Designer | 2019 - Current</p>
 
       </div>
       <div class="cv--awards">
