--- a/index.html
+++ b/index.html
@@ -37,22 +37,11 @@
 </head>
 <body class="top">
 
-  <header role="banner">
-
-    <p class="header__nav">
-      <a href="#top" class="logo is-scroll" rel="home">Marin Sekesan</a>
-      <a href="#cv" class="nav-item is-scroll first">CV</a>
-      <a href="#work" class="nav-item is-scroll">Work</a>
-      <a href="mailto:me@marinsekesan.com" class="nav-item last">Contact</a>
-    </p>
-
-  </header>
-
   <section class="intro">
 
     <div class="intro__logo"></div>
 
-    <h1 class="intro__title">Hi, I'm Marin Sekesan.<br />Melbourne based freelance UX, UI and Brand Designer.</h1>
+    <h1 class="intro__title">Hi, I'm Marin Sekesan.<br />A Melbourne based UX Designer.</h1>
 
     <h2 class="intro__summary"></h2>
 <h3>With an education in both Graphic Design, User Experience Design and Audio Engineering, I have spent the past 15 years developing my passion for functional design.</h3>
