--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <p>My knowledge of web standards and compliant HTML and CSS enables me to design responsive, touch screen optimised interfaces that are accessible to as many people as possible.</p>
         
-    <p>I'm currently employed at <a href="https://www.previousnext.com.au/" target="_blank">PreviousNext</a> and also play guitar in a band called <a href="http://kalacoma.com" target="_blank">Kalacoma</a>.</p>
+    <p>I'm currently employed at <a href="https://www.previousnext.com.au/" target="_blank">PreviousNext</a> and play guitar in <a href="http://kalacoma.com" target="_blank">Kalacoma</a>.</p>
 
     <p class="intro__nav">
       <a href="https://www.linkedin.com/in/marinsekesan/" class="nav-item nav-item--big last" target="_blank">Contact</a>
